using comboboxes to suggest reasonable default values for ranges

--- a/src/gui/axes_dialog.ui
+++ b/src/gui/axes_dialog.ui
@@ -36,6 +36,7 @@
           <object class="ttk.Labelframe" id="labelframe_7">
             <property name="height">200</property>
             <property name="padding">5</property>
+            <property name="relief">flat</property>
             <property name="text" translatable="yes">Vertical / Y</property>
             <property name="width">200</property>
             <layout manager="grid">
@@ -43,36 +44,12 @@
               <property name="row">0</property>
             </layout>
             <child>
-              <object class="ttk.Entry" id="entry_7">
+              <object class="ttk.Combobox" id="combo_y" named="True">
                 <property name="textvariable">string:y_var</property>
                 <property name="validate">all</property>
                 <property name="validatecommand" type="command" cbtype="entry_validate" args="%P %V">on_y</property>
                 <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
                   <property name="side">top</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Button" id="button1">
-                <property name="command" type="command" cbtype="simple">on_auto_y</property>
-                <property name="text" translatable="yes">Auto</property>
-                <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Button" id="button2">
-                <property name="command" type="command" cbtype="simple">on_fixed_y</property>
-                <property name="text" translatable="yes">Fixed</property>
-                <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
-                  <property name="side">right</property>
                 </layout>
               </object>
             </child>
@@ -82,6 +59,7 @@
           <object class="ttk.Labelframe" id="labelframe_6">
             <property name="height">200</property>
             <property name="padding">5</property>
+            <property name="relief">flat</property>
             <property name="text" translatable="yes">Horizontal / X</property>
             <property name="width">200</property>
             <layout manager="grid">
@@ -89,48 +67,67 @@
               <property name="row">1</property>
             </layout>
             <child>
-              <object class="ttk.Entry" id="entry_9">
+              <object class="ttk.Combobox" id="combo_x" named="True">
                 <property name="textvariable">string:x_var</property>
                 <property name="validate">all</property>
                 <property name="validatecommand" type="command" cbtype="entry_validate" args="%P %V">on_x</property>
                 <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
                   <property name="side">top</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Button" id="button3">
-                <property name="command" type="command" cbtype="simple">on_auto_x</property>
-                <property name="text" translatable="yes">Auto</property>
-                <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
-                  <property name="side">left</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="ttk.Button" id="button4">
-                <property name="command" type="command" cbtype="simple">on_fixed_x</property>
-                <property name="text" translatable="yes">Fixed</property>
-                <layout manager="pack">
-                  <property name="padx">3</property>
-                  <property name="pady">3</property>
-                  <property name="side">right</property>
                 </layout>
               </object>
             </child>
           </object>
         </child>
         <child>
-          <object class="ttk.Label" id="label1">
-            <property name="text" translatable="yes">Plot</property>
+          <object class="ttk.Frame" id="frame1">
+            <property name="height">200</property>
+            <property name="width">200</property>
             <layout manager="grid">
               <property name="column">1</property>
               <property name="row">0</property>
             </layout>
+            <child>
+              <object class="ttk.Frame" id="frame2">
+                <property name="height">200</property>
+                <property name="width">200</property>
+                <layout manager="pack">
+                  <property name="anchor">sw</property>
+                  <property name="expand">true</property>
+                  <property name="fill">both</property>
+                  <property name="side">top</property>
+                </layout>
+                <child>
+                  <object class="ttk.Separator" id="separator2">
+                    <property name="orient">vertical</property>
+                    <layout manager="pack">
+                      <property name="expand">true</property>
+                      <property name="fill">y</property>
+                      <property name="side">left</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="ttk.Label" id="label1">
+                    <property name="justify">center</property>
+                    <property name="padding">10</property>
+                    <property name="text" translatable="yes">    Plot    </property>
+                    <layout manager="pack">
+                      <property name="side">right</property>
+                    </layout>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Separator" id="separator1">
+                <property name="orient">horizontal</property>
+                <layout manager="pack">
+                  <property name="expand">true</property>
+                  <property name="fill">x</property>
+                  <property name="side">bottom</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
       </object>
