--- a/src/gui/settings_dialog.ui
+++ b/src/gui/settings_dialog.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.40.2">
+<interface version="1.4" author="PygubuDesigner 0.39.3">
   <project>
     <settings>
       <setting id="name">settings_dialog</setting>
@@ -103,7 +103,7 @@
                 <property name="text" translatable="yes">Shift:</property>
                 <layout manager="grid">
                   <property name="column">0</property>
-                  <property name="row">2</property>
+                  <property name="row">4</property>
                   <property name="sticky">w</property>
                 </layout>
               </object>
@@ -114,7 +114,7 @@
                 <property name="width">200</property>
                 <layout manager="grid">
                   <property name="column">1</property>
-                  <property name="row">2</property>
+                  <property name="row">4</property>
                 </layout>
                 <child>
                   <object class="ttk.Spinbox" id="spinbox_2">
@@ -153,7 +153,29 @@
                   <property name="column">1</property>
                   <property name="padx">5</property>
                   <property name="pady">3</property>
-                  <property name="row">3</property>
+                  <property name="row">5</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Label" id="label3">
+                <property name="text" translatable="yes">Min. Size:</property>
+                <layout manager="grid">
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                  <property name="sticky">w</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="ttk.Combobox" id="combobox_minsize" named="True">
+                <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_minsize_sel" add="" />
+                <layout manager="grid">
+                  <property name="column">1</property>
+                  <property name="padx">5</property>
+                  <property name="pady">3</property>
+                  <property name="row">2</property>
                   <property name="sticky">w</property>
                 </layout>
               </object>
