--- a/src/gui/log_dialog.ui
+++ b/src/gui/log_dialog.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.39.3">
+<interface version="1.4" author="PygubuDesigner 0.40.2">
   <project>
     <settings>
       <setting id="name">log_dialog</setting>
@@ -76,7 +76,7 @@
           <object class="ttk.Combobox" id="combobox1">
             <property name="state">readonly</property>
             <property name="textvariable">string:log_level</property>
-            <property name="values">Debug Info Warning Error</property>
+            <property name="values">Debug Info Warning Error Critical</property>
             <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_set_level" add="" />
             <layout manager="pack">
               <property name="side">left</property>
