--- a/src/gui/main_window.ui
+++ b/src/gui/main_window.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.40.2">
+<interface version="1.4" author="PygubuDesigner 0.39.3">
   <project>
     <settings>
       <setting id="name">main_window</setting>
@@ -112,7 +112,17 @@
                             <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_select_plotunit" add="" />
                             <layout manager="pack">
                               <property name="padx">5</property>
-                              <property name="side">right</property>
+                              <property name="side">left</property>
+                            </layout>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="ttk.Combobox" id="combobox_unit2" named="True">
+                            <property name="state">readonly</property>
+                            <bind sequence="&lt;&lt;ComboboxSelected&gt;&gt;" handler="on_select_plotunit2" add="" />
+                            <layout manager="pack">
+                              <property name="padx">5</property>
+                              <property name="side">left</property>
                             </layout>
                           </object>
                         </child>
