--- a/src/gui/tabular_dialog.ui
+++ b/src/gui/tabular_dialog.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<interface version="1.4" author="PygubuDesigner 0.40.2">
+<interface version="1.4" author="PygubuDesigner 0.39.3">
   <project>
     <settings>
       <setting id="name">tabular_dialog</setting>
@@ -75,12 +75,8 @@
                   </object>
                 </child>
                 <child>
-                  <object class="ttk.Checkbutton" id="checkbutton1">
-                    <property name="command" type="command" cbtype="simple">on_enable_filter</property>
-                    <property name="offvalue">ignore</property>
-                    <property name="onvalue">filter</property>
+                  <object class="ttk.Label" id="label1">
                     <property name="text" translatable="yes">X:</property>
-                    <property name="variable">string:enable_filter_x</property>
                     <layout manager="pack">
                       <property name="padx">5</property>
                       <property name="pady">5</property>
@@ -103,12 +99,8 @@
                   </object>
                 </child>
                 <child>
-                  <object class="ttk.Checkbutton" id="checkbutton2">
-                    <property name="command" type="command" cbtype="simple">on_enable_filter</property>
-                    <property name="offvalue">ignore</property>
-                    <property name="onvalue">filter</property>
+                  <object class="ttk.Label" id="label2">
                     <property name="text" translatable="yes">Cols:</property>
-                    <property name="variable">string:enable_filter_cols</property>
                     <layout manager="pack">
                       <property name="padx">5</property>
                       <property name="pady">5</property>
